# meme-gen

./: .gitignore  README.md  pyproject.toml  streamlit_app.py
src/marathi_meme_generator/: emotions.json  main.py  meme_search_terms.json  streamlit_app.py
templates/: index.html
